--- a/bookmyshowcss.css
+++ b/bookmyshowcss.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .logo{
     width: 150px;
     height: 50px;
@@ -38,6 +41,10 @@
     visibility: hidden;
 
 }
-.recomentedcard{
-   width: 500px;
+.recomentedcarusel{
+    height: 440px;
+}
+.borderstyle{
+    border-radius: 20px;
+
 }
