--- a/bookmyshowcss.css
+++ b/bookmyshowcss.css
@@ -2,12 +2,12 @@ body{
     overflow-x: hidden;
 }
 .logo{
-    width: 150px;
-    height: 50px;
+    width: 130px;
+    height: 35px;
 }
 .navbar2{
     width: 100%;
-    background-color: #333;
+    background-color: rgb(31, 37, 51);
     height: 20px;
 
 }
@@ -47,4 +47,20 @@ body{
 .borderstyle{
     border-radius: 20px;
 
+}
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    z-index: 1;
+}
+.footerlogo{
+    width: 28px;
+    height: 28px;
+}
+.navbg{
+    background-color: rgb(51, 53, 69);
 }
